overflow fixed & logo and menu fixed

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 .container-fluid {
     margin: 0px !important;
     padding: 0px !important;
+    overflow: hidden;
 }
 .gradientNav
 {
